layout cards completo

--- a/index.html
+++ b/index.html
@@ -102,6 +102,148 @@
 
         </div>
 
+        <!-- Seconda sezione -->
+        <div class="partner">
+
+            <div class="small-container">
+
+                <div class="partner-container">
+
+                    <div class="partner-img">
+                        Image 
+                    </div>
+
+                    <div class="partner-txt">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem necessitatibus numquam nesciunt, praesentium odit pariatur culpa architecto laborum similique molestias amet, assumenda ratione recusandae cupiditate inventore perspiciatis doloremque voluptate. Fugit?
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <!-- Terza sezione -->
+        <div class="operations">
+
+            <div class="small-container">
+
+                <div class="operations-title">
+
+                    <h2>Lorem ipsum dolor sit amet.</h2>
+
+                </div>
+
+                <div class="operations-row">
+
+                    <div class="operations-col">
+
+                        <div class="operations-col-img">
+                            Image
+                        </div>
+
+                        <div class="operations-col-txt">
+
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="operations-col">
+
+                        <div class="operations-col-img">
+                            Image
+                        </div>
+
+                        <div class="operations-col-txt">
+
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="operations-col">
+
+                        <div class="operations-col-img">
+                            Image
+                        </div>
+
+                        <div class="operations-col-txt">
+
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="operations-col">
+
+                        <div class="operations-col-img">
+                            Image
+                        </div>
+
+                        <div class="operations-col-txt">
+
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="operations-col">
+
+                        <div class="operations-col-img">
+                            Image
+                        </div>
+
+                        <div class="operations-col-txt">
+
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+
+                        </div>
+
+                    </div>
+
+                    <div class="operations-col">
+
+                        <div class="operations-col-img">
+                            Image
+                        </div>
+
+                        <div class="operations-col-txt">
+
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="operations-subtitle">
+
+                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Lorem ipsum dolor sit amet.</a>
+                </div>
+            </div>
+
+        </div>
+
     </main>
 
     <!-- Footer -->
