inizio layout compagnie

--- a/index.html
+++ b/index.html
@@ -244,6 +244,34 @@
 
         </div>
 
+        <!-- Quarta sezione -->
+        <div class="companies">
+
+            <div class="big-square sides">
+
+                <div class="company">Image</div>
+                <div class="company">Image</div>
+                <div class="company">Image</div>
+                <div class="company">Image</div>
+
+            </div>
+
+            <div class="big-square center">
+
+                <h2>Lorem</h2>
+            </div>
+
+            <div class="big-square sides">
+
+                <div class="company">Image</div>
+                <div class="company">Image</div>
+                <div class="company">Image</div>
+                <div class="company">Image</div>
+
+            </div>
+
+        </div>
+
     </main>
 
     <!-- Footer -->
