problemi layout quadrato centrale

--- a/index.html
+++ b/index.html
@@ -259,7 +259,12 @@
             <div class="big-square center">
 
                 <h2>Lorem</h2>
+
+                <p>Lorem ipsum dolor sit.</p>
                 
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti animi iusto, accusantium dolor sapiente quos commodi sequi cum, porro recusandae harum nulla aperiam pariatur doloribus ut cupiditate labore tempore soluta.</p>
+
+                <p>Lorem ipsum dolor sit.</p>
             </div>
 
             <div class="big-square sides">
