--- a/index.html
+++ b/index.html
@@ -260,11 +260,12 @@
 
                 <h2>Lorem</h2>
 
-                <p>Lorem ipsum dolor sit.</p>
-                
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti animi iusto, accusantium dolor sapiente quos commodi sequi cum, porro recusandae harum nulla aperiam pariatur doloribus ut cupiditate labore tempore soluta.</p>
+                <p id="first-par">Lorem ipsum dolor sit.</p>
 
-                <p>Lorem ipsum dolor sit.</p>
+                <p id="second-par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti animi iusto, accusantium dolor sapiente quos commodi sequi cum, porro recusandae harum nulla aperiam pariatur doloribus ut cupiditate labore tempore soluta.</p>
+
+                <p id="third-par">Lorem ipsum dolor sit.</p>
+
             </div>
 
             <div class="big-square sides">
@@ -278,10 +279,138 @@
 
         </div>
 
+        <!-- Quinta sezione -->
+
+        <div class="free-trial">
+
+            <div class="small-container">
+
+                <div class="free-trial-container">
+
+                    <div class="free-trial-text">
+                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing.</h3>
+                    </div>
+
+                    <div class="free-trial-btn">
+                        <input type="button" value="lorem"> 
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Sesta sezione -->
+
+        <div class="faq">
+
+            <div class="small-container">
+
+                <div class="faq-container">
+
+                    <h2>Lorem, ipsum.</h2>
+
+                    <ul>
+
+                        <li>lorem</li>
+                        <li>lorem</li>
+                        <li>lorem</li>
+
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
+
     </main>
 
     <!-- Footer -->
     <footer>
+
+        <div class="big-container">
+
+            <div class="footer-container">
+
+                <div class="footer-col">
+
+                    <h4>lorem</h4>
+
+                    <ul>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+
+                    <h4>lorem</h4>
+
+                    <ul>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+
+                    <h4>lorem</h4>
+
+                    <ul>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+
+                    <h4>lorem</h4>
+
+                    <ul>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+
+                    <h4>lorem</h4>
+
+                    <ul>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col">
+
+                    <p>italiano</p>
+                    
+                </div>
+
+            </div>
+
+        </div>
 
     </footer>
 
