problemi li header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,24 @@
         <div class="header-container">
             
             <div class="nav1">
-                <p> Logo + menu1 </p>
+
+                <ul>
+                    <li>
+
+                        <a href="https://www.dropbox.com/it/">
+                            <img src="img/logo-small.png" alt="Logo">
+                        </a>
+
+                    </li>
+
+                    <li><a href="https://www.dropbox.com/it/">Perchè Dropbox</a></li>
+
+                    <li><a href="https://www.dropbox.com/it/">Funzioni</a></li>
+                    
+                    <li><a href="https://www.dropbox.com/it/">Piani e Prezzi</a></li>
+
+                </ul>
+
             </div>
 
             <div class="nav2">
