--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -41,7 +41,7 @@
                     <li><a href="https://www.dropbox.com/it/">Perchè Dropbox</a></li>
 
                     <li><a href="https://www.dropbox.com/it/">Funzioni</a></li>
-                    
+
                     <li><a href="https://www.dropbox.com/it/">Piani e Prezzi</a></li>
 
                 </ul>
@@ -49,7 +49,14 @@
             </div>
 
             <div class="nav2">
-               <p> menu2 + btn </p>
+               
+                <ul>
+                    <li><a href="https://www.dropbox.com/it/">Supporto</a></li>
+                    <li><a href="https://www.dropbox.com/it/">Contatta l'ufficio vendite</a></li>
+                    <li><a href="https://www.dropbox.com/it/">Accedi</a></li>
+                    <li><a href="https://www.dropbox.com/it/"><input class="btn" type="button" value="Inizia"></a></li>
+                </ul>
+
             </div>
 
         </div>
@@ -64,25 +71,28 @@
 
             <div class="big-container">
                 <div class="title">
-                    <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
+                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 </div>
 
                 <div class="jumbotron-row">
 
-                    <div class="col-text red">
+                    <div class="col-text">
 
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolorum adipisci corrupti voluptate maxime repellat laudantium iusto enim esse repellendus!
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
 
                         </p>
 
+                        <input class="btn" type="button" value="Inizia la tua prova gratuita">
+
+                        <p>Annulla in qualsiasi momento</p>
+
+                        <a href="https://www.dropbox.com/it/"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
 
-                    <div class="col-img green">
+                    <div class="col-img">
 
-                        <div class="img">
-                            Immagine
-                        </div>
+                        <img src="img/jumbo.png" alt="Jumbotron">
 
                     </div>
 
