business plan finito

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                 <div class="mini-title">
 
-                    <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                    <h2>Trova il piano business che fa per te</h2>
 
                     <input  type="radio" name="Fatturazione" id="Fatturazione mensile">Fatturazione mensile
                     <input class="second-radio" type="radio" name="Fatturazione" id="Fatturazione annuale">Fatturazione annuale
@@ -118,10 +118,135 @@
 
                 <div class="business-plan-row">
                     
-                    <div class="business-plan-col"></div>
-                    <div class="business-plan-col"></div>
-                    <div class="business-plan-col"></div>
-                    <div class="business-plan-col last-col"></div>
+                    <div class="business-plan-col">
+
+                        <p><i class="fa-solid fa-user"></i>Singolo</p>
+
+                        <div class="business-plan-col-inner">
+
+                            <h3>Professional</h3>
+
+                            <ul>
+                                <li class="bold">€ 12.00</li>
+                                <li>/mese</li>
+                            </ul>
+
+                            <ul>
+                                <li><i class="fa-solid fa-user"></i>1 utente</li>
+                                <li><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</li>
+                                <li><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                            </ul>
+
+                            <input class="btn" type="button" value="Prova gratis per 30 giorni">
+
+                            <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
+
+                            <h4 class="bold">Punti Salienti del piano</h4>
+
+                            <ul class="checklisted">
+                                <li><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</li>
+                                <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+                    <div class="business-plan-col">
+
+                        <p><i class="fa-solid fa-users"></i>Team</p>
+
+                        <div class="business-plan-col-inner">
+
+                            <h3>Advanced</h3>
+
+                            <ul>
+                                <li class="bold">€ 18.00</li>
+                                <li>/utente/mese</li>
+                            </ul>
+
+                            <ul>
+                                <li><i class="fa-solid fa-users"></i>3 o più utenti</li>
+                                <li><i class="fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo team</li>
+                                <li><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i tuoi file del tuo team</li>
+                            </ul>
+
+                            <input class="btn" type="button" value="Prova gratis per 30 giorni">
+
+                            <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
+
+                            <h4 class="bold">Punti Salienti del piano</h4>
+
+                            <ul class="checklisted">
+                                <li><i class="fa-solid fa-check"></i>Nessun limite di spazio per i file</li>
+                                <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fa-solid fa-check"></i>Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                <li><i class="fa-solid fa-check"></i>Possibilità di inserire nuovi membri del team</li>
+                                <li><i class="fa-solid fa-check"></i>Gestione dei permessi in base ai ruoli</li>
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+                    <div class="business-plan-col">
+
+                        <p><i class="fa-solid fa-building"></i>Azienda</p>
+
+                        <div class="business-plan-col-inner">
+
+                            <h3>Enterprise</h3>
+
+                            <ul>
+                                <li class="bold">Contattaci</li>
+                                <li>-</li>
+                            </ul>
+
+                            <ul>
+                                <li><i class="fa-solid fa-user"></i>10 o più utenti</li>
+                                <li><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la tua azienda</li>
+                                <li><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
+                            </ul>
+
+                            <input class="btn" type="button" value="Contattaci">
+
+                            <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
+
+                            <h4 class="bold">Punti Salienti del piano</h4>
+
+                            <ul class="checklisted">
+                                <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fa-solid fa-check"></i>Servizio assistenza 24h</li>
+                                <li><i class="fa-solid fa-check"></i>Possibilità di personalizzazione totale</li>
+                            </ul>
+
+                        </div>
+
+                    </div>
+
+                    <div class="business-plan-col last-col">
+
+                        <p><i class="fa-solid fa-users"></i>Team</p>
+
+                        <div class="last-col-inner">
+
+                            <div class="first-part-col">
+
+                                <h3>Enterprise</h3>
+
+                                <h4>Contatta l'ufficio vendite per i prezzi</h4>
+
+                                <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                            </div>
+
+                            <div class="second-part-col">
+
+                                <input class="btn" type="button" value="Contatta l'ufficio vendite">
+                            </div>
+
+                        </div>
+
+                    </div>
 
                 </div>
 
