sezione operations completa

--- a/index.html
+++ b/index.html
@@ -262,11 +262,21 @@
                 <div class="partner-container">
 
                     <div class="partner-img">
-                        Image 
+                        <img src="img/partner.png" alt="Partners"> 
                     </div>
 
                     <div class="partner-txt">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem necessitatibus numquam nesciunt, praesentium odit pariatur culpa architecto laborum similique molestias amet, assumenda ratione recusandae cupiditate inventore perspiciatis doloremque voluptate. Fugit?
+
+                        <h3 class="bold">
+                            Entra in contatto con un partner Dropbox
+                        </h3>
+
+                        <p>
+                            Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                        </p>
+
+                        <input class="grey-btn" type="button" value="Trova un partner">
+
                     </div>
 
                 </div>
@@ -282,7 +292,7 @@
 
                 <div class="operations-title">
 
-                    <h2>Lorem ipsum dolor sit amet.</h2>
+                    <h2>Esegui più operazioni con Dropbox Business</h2>
 
                 </div>
 
@@ -291,14 +301,16 @@
                     <div class="operations-col">
 
                         <div class="operations-col-img">
-                            Image
+
+                            <img src="img/business-feature-coordinate-it.png" alt="business pic">
+
                         </div>
 
                         <div class="operations-col-txt">
 
-                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
 
                         </div>
 
@@ -307,14 +319,14 @@
                     <div class="operations-col">
 
                         <div class="operations-col-img">
-                            Image
+                            <img src="img/business-feature-integrations-it.png" alt="">
                         </div>
 
                         <div class="operations-col-txt">
 
-                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
 
                         </div>
 
@@ -323,14 +335,14 @@
                     <div class="operations-col">
 
                         <div class="operations-col-img">
-                            Image
+                            <img src="img/business-feature-multi-device.png" alt="">
                         </div>
 
                         <div class="operations-col-txt">
 
-                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
 
                         </div>
 
@@ -339,14 +351,14 @@
                     <div class="operations-col">
 
                         <div class="operations-col-img">
-                            Image
+                            <img src="img/business-feature-security.png" alt="">
                         </div>
 
                         <div class="operations-col-txt">
 
-                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
 
                         </div>
 
@@ -355,14 +367,14 @@
                     <div class="operations-col">
 
                         <div class="operations-col-img">
-                            Image
+                            <img src="img/business-feature-send-files-it.png" alt="">
                         </div>
 
                         <div class="operations-col-txt">
 
-                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
 
                         </div>
 
@@ -371,14 +383,14 @@
                     <div class="operations-col">
 
                         <div class="operations-col-img">
-                            Image
+                            <img src="img/business-feature-switching-tools.png" alt="">
                         </div>
 
                         <div class="operations-col-txt">
 
-                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <h3>Passa di meno da uno strumento all'altro</h3>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fugiat doloribus suscipit cum? Nostrum nulla adipisci reiciendis officia expedita recusandae.</p>
+                            <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
 
                         </div>
 
@@ -388,9 +400,9 @@
 
                 <div class="operations-subtitle">
 
-                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3>Più di 500.000 team utilizzano Dropbox Business</h3>
 
-                    <a href="http://" target="_blank" rel="noopener noreferrer">Lorem ipsum dolor sit amet.</a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">Scopri di più sui nostri clienti</a>
                 </div>
             </div>
 
