problemi logo aziende

--- a/index.html
+++ b/index.html
@@ -413,10 +413,22 @@
 
             <div class="big-square sides">
 
-                <div class="company">Image</div>
-                <div class="company">Image</div>
-                <div class="company">Image</div>
-                <div class="company">Image</div>
+                <div class="company">
+                    <img src="img/designit.svg" alt="">
+                </div>
+
+                <div class="company">
+                    <img src="img/arizona_state_university.svg" alt="">
+                </div>
+
+                <div class="company">
+                    <img src="img/university_of_florida.svg" alt="">
+                </div>
+
+                <div class="company">
+                    <img src="img/topps.svg" alt="">
+                </div>
+
 
             </div>
 
@@ -434,10 +446,21 @@
 
             <div class="big-square sides">
 
-                <div class="company">Image</div>
-                <div class="company">Image</div>
-                <div class="company">Image</div>
-                <div class="company">Image</div>
+                <div class="company">
+                    <img src="img/world_bicycle_relief.svg" alt="">
+                </div>
+
+                <div class="company">
+                    <img src="img/hearst_corp.svg" alt="">
+                </div>
+
+                <div class="company">
+                    <img src="img/lonely_planet.svg" alt="">
+                </div>
+
+                <div class="company">
+                    <img src="img/clear_channel.svg" alt="">
+                </div>
 
             </div>
 
