--- a/index.html
+++ b/index.html
@@ -413,19 +413,19 @@
 
             <div class="big-square sides">
 
-                <div class="company">
+                <div id="designit" class="company">
                     <img src="img/designit.svg" alt="">
                 </div>
 
-                <div class="company">
+                <div id="asu" class="company">
                     <img src="img/arizona_state_university.svg" alt="">
                 </div>
 
-                <div class="company">
+                <div id="uf" class="company">
                     <img src="img/university_of_florida.svg" alt="">
                 </div>
 
-                <div class="company">
+                <div id="topps" class="company">
                     <img src="img/topps.svg" alt="">
                 </div>
 
@@ -434,31 +434,29 @@
 
             <div class="big-square center">
 
-                <h2>Lorem</h2>
+                <img src="img/designit.svg" alt="">
 
-                <p id="first-par">Lorem ipsum dolor sit.</p>
+                <p id="second-par">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper". </p>
 
-                <p id="second-par">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti animi iusto, accusantium dolor sapiente quos commodi sequi cum, porro recusandae harum nulla aperiam pariatur doloribus ut cupiditate labore tempore soluta.</p>
-
-                <p id="third-par">Lorem ipsum dolor sit.</p>
+                <p id="third-par">Morten Thomsen, Global IT Lead</p>
 
             </div>
 
             <div class="big-square sides">
 
-                <div class="company">
+                <div id="wbr" class="company">
                     <img src="img/world_bicycle_relief.svg" alt="">
                 </div>
 
-                <div class="company">
+                <div id="hearst" class="company">
                     <img src="img/hearst_corp.svg" alt="">
                 </div>
 
-                <div class="company">
+                <div id="lp" class="company">
                     <img src="img/lonely_planet.svg" alt="">
                 </div>
 
-                <div class="company">
+                <div id="cc" class="company big">
                     <img src="img/clear_channel.svg" alt="">
                 </div>
 
@@ -475,11 +473,11 @@
                 <div class="free-trial-container">
 
                     <div class="free-trial-text">
-                        <h3>Lorem, ipsum dolor sit amet consectetur adipisicing.</h3>
+                        <h3>Porta Dropbox Business nella tua azienda.</h3>
                     </div>
 
                     <div class="free-trial-btn">
-                        <input type="button" value="lorem"> 
+                        <input type="button" value="Inizia la tua prova gratuita"> 
                     </div>
 
                 </div>
