problemi con sezione faq

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
 
                             <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
 
+                            <hr>
+
                             <h4 class="bold">Punti Salienti del piano</h4>
 
                             <ul class="checklisted">
@@ -174,6 +176,8 @@
                             <input class="btn" type="button" value="Prova gratis per 30 giorni">
 
                             <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
+
+                            <hr>
 
                             <h4 class="bold">Punti Salienti del piano</h4>
 
@@ -211,6 +215,8 @@
                             <input class="btn" type="button" value="Contattaci">
 
                             <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
+
+                            <hr>
 
                             <h4 class="bold">Punti Salienti del piano</h4>
 
@@ -493,13 +499,39 @@
 
                 <div class="faq-container">
 
-                    <h2>Lorem, ipsum.</h2>
+                    <h2>Domande frequenti</h2>
 
-                    <ul>
+                    <ul class="faq-small-container">
 
-                        <li>lorem</li>
-                        <li>lorem</li>
-                        <li>lorem</li>
+                        <li>
+
+                            <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+
+                            <i class="fa-solid fa-angle-down"></i>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur accusamus commodi architecto repellat beatae. Porro, quae? Vitae blanditiis soluta quis rerum similique inventore, fugit cum et animi laudantium, voluptates necessitatibus.</p>
+
+                        </li>
+
+                        <li>
+
+                            <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+
+                            <i class="fa-solid fa-angle-down"></i>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur eaque et fugiat iusto, quaerat, veniam consequuntur possimus voluptas ipsa impedit a. Excepturi obcaecati corrupti animi? Consequuntur atque veniam aperiam officia.</p>
+
+                        </li>
+
+                        <li>
+
+                            <h4>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+
+                            <i class="fa-solid fa-angle-down"></i>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid ipsa libero eius reprehenderit explicabo ducimus consequatur tenetur doloremque accusamus dignissimos, et molestias quam alias, optio laboriosam? Ea deleniti sunt quo.</p>
+
+                        </li>
 
                     </ul>
                 </div>
