ritocco buttons e fine faq section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li><a href="https://www.dropbox.com/it/">Supporto</a></li>
                     <li><a href="https://www.dropbox.com/it/">Contatta l'ufficio vendite</a></li>
                     <li><a href="https://www.dropbox.com/it/">Accedi</a></li>
-                    <li><a href="https://www.dropbox.com/it/"><input class="btn" type="button" value="Inizia"></a></li>
+                    <li><a class="btn" href="https://www.dropbox.com/it/">Inizia</a></li>
                 </ul>
 
             </div>
@@ -83,7 +83,7 @@
 
                         </p>
 
-                        <input class="btn" type="button" value="Inizia la tua prova gratuita">
+                        <a href="https://www.dropbox.com/it/" class="btn">Inizia la tua prova gratuita</a>
 
                         <p>Annulla in qualsiasi momento</p>
 
@@ -137,7 +137,7 @@
                                 <li><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
 
-                            <input class="btn" type="button" value="Prova gratis per 30 giorni">
+                            <a class="btn" href="http://">Prova gratis per 30 giorni</a>
 
                             <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
 
@@ -173,7 +173,7 @@
                                 <li><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i tuoi file del tuo team</li>
                             </ul>
 
-                            <input class="btn" type="button" value="Prova gratis per 30 giorni">
+                            <a class="btn" href="http://">Prova gratis per 30 giorni</a>
 
                             <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
 
@@ -212,9 +212,9 @@
                                 <li><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
                             </ul>
 
-                            <input class="btn" type="button" value="Contattaci">
+                            <a class="btn" href="http://">Prova gratis per 30 giorni</a>
 
-                            <p><span>oppure</span> <a href="https://www.dropbox.com/it/">acquista ora</a></p>
+                            <p><span>oppure</span> <a class="link" href="https://www.dropbox.com/it/">acquista ora</a></p>
 
                             <hr>
 
@@ -247,7 +247,7 @@
 
                             <div class="second-part-col">
 
-                                <input class="btn" type="button" value="Contatta l'ufficio vendite">
+                                <a href="https://www.dropbox.com/it/" class="btn">Contatta l'ufficio vendite</a>
                             </div>
 
                         </div>
@@ -281,7 +281,7 @@
                             Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
                         </p>
 
-                        <input class="grey-btn" type="button" value="Trova un partner">
+                        <a href="https://www.dropbox.com/it/" class="grey-btn">Trova un partner</a>
 
                     </div>
 
@@ -483,7 +483,9 @@
                     </div>
 
                     <div class="free-trial-btn">
-                        <input type="button" value="Inizia la tua prova gratuita"> 
+
+                        <a href="https://www.dropbox.com/it/" class="btn-grey">Inizia la tua prova gratuita</a>
+
                     </div>
 
                 </div>
@@ -551,14 +553,16 @@
 
                 <div class="footer-col">
 
-                    <h4>lorem</h4>
+                    <h4>Dropbox</h4>
 
                     <ul>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
+
+                        <li><a href="https://www.dropbox.com/it/">Applicazione desktop</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Perchè Dropbox</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Piani</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Sicurezza</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Funzioni</a></li>
+                        
                     </ul>
 
                 </div>
