--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <li><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
                             </ul>
 
-                            <a class="btn" href="http://">Prova gratis per 30 giorni</a>
+                            <a class="btn" href="http://">Contattaci</a>
 
                             <p><span>oppure</span> <a class="link" href="https://www.dropbox.com/it/">acquista ora</a></p>
 
@@ -442,6 +442,8 @@
 
                 <img src="img/designit.svg" alt="">
 
+                <hr>
+
                 <p id="second-par">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper". </p>
 
                 <p id="third-par">Morten Thomsen, Global IT Lead</p>
@@ -562,70 +564,80 @@
                         <li><a href="https://www.dropbox.com/it/">Piani</a></li>
                         <li><a href="https://www.dropbox.com/it/">Sicurezza</a></li>
                         <li><a href="https://www.dropbox.com/it/">Funzioni</a></li>
-                        
+
                     </ul>
 
                 </div>
 
                 <div class="footer-col">
 
-                    <h4>lorem</h4>
+                    <h4>Prodotti</h4>
 
                     <ul>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
+
+                        <li><a href="https://www.dropbox.com/it/">Applicazione desktop</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Perchè Dropbox</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Piani</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Sicurezza</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Funzioni</a></li>
+
                     </ul>
 
                 </div>
 
                 <div class="footer-col">
 
-                    <h4>lorem</h4>
+                    <h4>Azienda</h4>
 
                     <ul>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
+
+                        <li><a href="https://www.dropbox.com/it/">Applicazione desktop</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Perchè Dropbox</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Piani</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Sicurezza</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Funzioni</a></li>
+
                     </ul>
 
                 </div>
 
                 <div class="footer-col">
 
-                    <h4>lorem</h4>
+                    <h4>Supporto</h4>
 
                     <ul>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
+
+                        <li><a href="https://www.dropbox.com/it/">Applicazione desktop</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Perchè Dropbox</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Piani</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Sicurezza</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Funzioni</a></li>
+
                     </ul>
 
                 </div>
 
                 <div class="footer-col">
 
-                    <h4>lorem</h4>
+                    <h4>Community</h4>
 
                     <ul>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
-                        <li>Lorem</li>
+
+                        <li><a href="https://www.dropbox.com/it/">Applicazione desktop</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Perchè Dropbox</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Piani</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Sicurezza</a></li>
+                        <li><a href="https://www.dropbox.com/it/">Funzioni</a></li>
+
                     </ul>
 
                 </div>
 
                 <div class="footer-col">
 
-                    <p>italiano</p>
+                    <hr>
+
+                    <p><i class="fa-solid fa-earth-americas"></i> italiano <i class="fa-solid fa-caret-up"></i></p>
                     
                 </div>
 
