esercizio completo con ritocchi finali

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
             </div>
 
-            <div class="big-square center">
+            <div class="center">
 
                 <img src="img/designit.svg" alt="">
 
@@ -637,7 +637,7 @@
 
                     <hr>
 
-                    <p><i class="fa-solid fa-earth-americas"></i> italiano <i class="fa-solid fa-caret-up"></i></p>
+                    <a class="lang"><i class="fa-solid fa-earth-americas"></i> italiano <i class="fa-solid fa-caret-up"></i></a>
                     
                 </div>
 
